fixing overflow of body in all pages

--- a/pricing/style.css
+++ b/pricing/style.css
@@ -1,13 +1,21 @@
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+}
 
-
-
-.anchor{
+.anchor {
     text-decoration: none;
     color: inherit;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    overflow-x: hidden; */
 
-
+}
 
 
 
